--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/index.xhtml
@@ -179,7 +179,7 @@
                     </c:when>
                     <c:otherwise>
                         NOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
-                        <p:media value="#{gestionArchivoMultimediaController.archivoVer}" class="Container50" player="quicktime" >
+                        <p:media value="#{gestionArchivoMultimediaController.archivoVer}" class="Container50" player="windows" >
                             <f:param name="autoPlay" value="true" />
                         </p:media>
                     </c:otherwise>
