--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/index.xhtml
@@ -3,7 +3,8 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/WEB-INF/template.xhtml">
+                template="/WEB-INF/template.xhtml"
+                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
@@ -43,7 +44,7 @@
                             #{dateUtils.getFormatedDate(car.aeFin)}
                         </p:column>
                         <p:column headerText="Estado" filterBy="#{car.aeEstado}" filterMatchMode="contains" filterable="true">
-                            #{car.aeEstado}
+                            #{gestionarAnioEscolarController.getEstadoCurso(car.aeEstado)}
                         </p:column>
                         <p:column headerText="Acciones">
                             <p:commandLink action="#{gestionarAnioEscolarController.modificar(car)}" update="tabMenu" >
